apps/lf-prod/gateway/leadsfilter/www-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: leadsfilter-www-redirect
  namespace: lf-prod
spec:
  parentRefs:
    - name: leadsfilter
  hostnames:
    - www.leadsfilter.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: leadsfilter.com
            port: 443
            statusCode: 301
